--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -62,7 +62,7 @@
                                     </div>
                                 </td>
                                 <td th:text="${ai.getAiModelName()}">초기 모델</td>
-                                <td th:text="${ai.getMae()}">15%</td>
+                                <td th:text="${ai.getMse()}">15%</td>
                                 <td th:text="${ai.getCnt()}">3.2</td>
                                 <td>
                                     <div class="row justify-content-center">
