--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -34,7 +34,7 @@
                                 <span class="">이름</span>
                             </th>
                             <th scope="col">
-                                <span>MAE</span>
+                                <span>MSE</span>
                             </th>
                             <th scope="col">
                                 <span>평균 만족도</span>
