--- a/src/main/resources/templates/event/event-manage.html
+++ b/src/main/resources/templates/event/event-manage.html
@@ -22,14 +22,12 @@
                         </div>
                         <div class="row bg-white">
                             <div class="col-5 align-items-center">
-                                <!--
                                 <div class="row mt-2">
                                     <div class="col pe-0" style="position : relative">
                                         <input type="text" style="border-radius: 0" class="form-control form-input" placeholder="이름 검색" id="word">
                                         <i class="bi bi-search fs-5" style="position : absolute; top: 11%; left : 95%; cursor: pointer" onclick="searchConnect()"></i>
                                     </div>
                                 </div>
-                                -->
                             </div>
                             <div class="col-3 offset-4 align-items-center text-end">
                                 <a href="/admin/event/add" class="btn btn-primary add mt-2 sidebarItem fs-6">행사 등록</a>
@@ -113,7 +111,7 @@
 
     function searchConnect(){
         let wordBox = document.getElementById("word");
-        window.self.location.href = 'http://localhost:60002/admin/node/search/' + wordBox.value;
+        window.self.location.href = `http://ceprj.gachon.ac.kr:60002/admin/event/sortedlist/0?sortedList=${wordBox.value}`;
     }
 </script>
 <script th:inline="javascript">
