--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -87,7 +87,6 @@
                             사용자목록
                         </div>
                         <div class="row bg-white">
-                            <!--
                             <div class="col-5 align-items-center">
                                 <div class="row mt-2">
                                     <div class="col pe-0" style="position : relative">
@@ -96,7 +95,6 @@
                                     </div>
                                 </div>
                             </div>
-                            -->
                             <div class="col-3 offset-4 align-items-center text-end">
                             </div>
                         </div>
@@ -237,7 +235,7 @@
 
     function searchConnect(){
         let wordBox = document.getElementById("word");
-        window.self.location.href = 'http://localhost:60002/admin/users/search/' + wordBox.value;
+        window.self.location.href = `http://ceprj.gachon.ac.kr:60002/admin/users/sortedlist/0?sortedList=${wordBox.value}`;
     }
 </script>
 <script th:inline="javascript">
