검색 기능 전체 반영 - 3

--- a/src/main/resources/templates/inquiry/inquiry-manage.html
+++ b/src/main/resources/templates/inquiry/inquiry-manage.html
@@ -145,7 +145,7 @@
     <script>
         function searchConnect(){
             let wordBox = document.getElementById("word");
-            window.self.location.href = `http://ceprj.gachon.ac.kr:60002/admin/inquiry/sortedlist/0?sortedList=${wordBox.value}`;
+            window.self.location.href = `http://ceprj.gachon.ac.kr:60002/admin/inquiry/sortedlist/0?sort=${wordBox.value}`;
         }
     </script>
     <script>
