--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -231,7 +231,7 @@
 
     function searchConnect(){
         let wordBox = document.getElementById("word");
-        window.self.location.href = `http://ceprj.gachon.ac.kr:60002/admin/node/sortedlist/0?sortedList=${wordBox.value}`;
+        window.self.location.href = `http://ceprj.gachon.ac.kr:60002/admin/node/sortedlist/0?sort=${wordBox.value}`;
     }
 </script>
 <script th:inline="javascript">
