--- a/src/main/resources/templates/event/event-manage.html
+++ b/src/main/resources/templates/event/event-manage.html
@@ -111,7 +111,7 @@
 
     function searchConnect(){
         let wordBox = document.getElementById("word");
-        window.self.location.href = `http://ceprj.gachon.ac.kr:60002/admin/event/sortedlist/0?sortedList=${wordBox.value}`;
+        window.self.location.href = `http://ceprj.gachon.ac.kr:60002/admin/event/sortedlist/0?sort=${wordBox.value}`;
     }
 </script>
 <script th:inline="javascript">
