구글 맵 API 수정

--- a/src/main/resources/templates/line/line-add.html
+++ b/src/main/resources/templates/line/line-add.html
@@ -154,12 +154,18 @@
             const tag = document.createElement("div");
             tag.className = "exist-tag";
             tag.textContent = data.nodeName;
+            const pinViewScaled = new google.maps.marker.PinView({
+                scale: 0.5,
+                glyphColor: "#ffe54b",
+                borderColor: "#ffe54b",
+                background: "#ffe54b",
+            });
             const markerView = new google.maps.marker.AdvancedMarkerView({
                 map,
                 position: {lat: data.nodeLatitude, lng: data.nodeLongitude},
                 draggable : true,
                 title: data.nodeName,
-                content : tag
+                content : pinViewScaled.element,
             });
             markerView.nodeAltitude = data.nodeAltitude;
             markerView.nodeId = data.nodeId;
@@ -208,7 +214,27 @@
             });
         });
 
+        let lineNodeList = [[${lineNode}]];
+        let path = [];
+        console.log(lineNodeList);
+        lineNodeList.forEach(function(data){
+            path.push(
+                { lat: data[0].nodeLatitude,
+                    lng: data[0].nodeLongitude
+                })
+            ;
+            path.push({ lat: data[1].nodeLatitude, lng: data[1].nodeLongitude });
+        });
 
+        const flightPath = new google.maps.Polyline({
+            path: path,
+            geodesic: true,
+            strokeColor: "#ffe54b",
+            strokeOpacity: 1.0,
+            strokeWeight: 2,
+        });
+
+        flightPath.setMap(map);
     }
     window.initMap = initMap;
 </script>
