--- a/src/main/resources/templates/node/node-add.html
+++ b/src/main/resources/templates/node/node-add.html
@@ -139,12 +139,18 @@
             mapId: 'DEMO_MAP_ID',
         });
         document.getElementById("alti").value = "44.95606231689453";
+
         const infoWindow = new google.maps.InfoWindow();
 
         let nodeList = [[${nodeList}]];
 
         nodeList.forEach(function(data){
-
+            const pinViewScaled = new google.maps.marker.PinView({
+                scale: 0.5,
+                glyphColor: "#ffe54b",
+                borderColor: "#ffe54b",
+                background: "#ffe54b",
+            });
             const tag = document.createElement("div");
             tag.className = "exist-tag";
             tag.textContent = data.nodeName;
@@ -154,7 +160,7 @@
                 position: {lat: data.nodeLatitude, lng: data.nodeLongitude},
                 draggable : true,
                 title: data.nodeName,
-                content : tag
+                content : pinViewScaled.element,
             });
             markerView.nodeAltitude = data.nodeAltitude;
 
@@ -205,7 +211,27 @@
                 );
         });
 
-        let lineNodeList = [[${lineNodeList}]];
+        let lineNodeList = [[${lineNode}]];
+        let path = [];
+        console.log(lineNodeList);
+        lineNodeList.forEach(function(data){
+            path.push(
+                { lat: data[0].nodeLatitude,
+                  lng: data[0].nodeLongitude
+                })
+            ;
+            path.push({ lat: data[1].nodeLatitude, lng: data[1].nodeLongitude });
+        });
+
+        const flightPath = new google.maps.Polyline({
+            path: path,
+            geodesic: true,
+            strokeColor: "#ffe54b",
+            strokeOpacity: 1.0,
+            strokeWeight: 2,
+        });
+
+        flightPath.setMap(map);
     }
     window.initMap = initMap;
 </script>
