로그 최종 수정

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -99,7 +99,7 @@
                 문의 관리
             </div>
         </a>
-        <a href="/admin/log/manage/0" th:href="@{/admin/log/manage}"  class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'log' ? 'link' : 'white'">
+        <a href="/admin/log/manage/0" th:href="@{/admin/log/manage/0}"  class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'log' ? 'link' : 'white'">
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-server fs-4"></i>
             </div>
