대시보드 - AI 만족도 콘솔

--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -285,14 +285,8 @@
         }
     });
 
-    function viewDetail() {
-        var additionalOptions = document.getElementById("additionalOptions");
-        if (additionalOptions.classList.contains("show")) {
-            additionalOptions.classList.remove("show");
-        } else {
-            additionalOptions.classList.add("show");
-        }
-    }
+    let timeSatisfaction = [[${satisfaction}]];
+    console.log(timeSatisfaction);
 
     const ctx3 = document.getElementById('myChart3');
 
