--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -64,10 +64,10 @@
                                 <td th:text="${ai.getAiModelName()}">초기 모델</td>
                                 <td th:text="${ai.getMse()}">15%</td>
                                 <td>
-                                    <span th:if="${ai.getCnt() eq 0}">
+                                    <span th:if="${ai.getCnt() == 0}">
                                          <span class="badge rounded-pill text-bg-secondary">사용되지 않음</span>
                                     </span>
-                                    <span th:unless="${ai.getCnt() != 0}">
+                                    <span th:if="${ai.getCnt() != 0}">
                                         <span th:text="${ai.getTotalSatisfaction() / ai.getCnt()}">평균 만족도</span>
                                     </span>
                                 </td>
