--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -20,6 +20,7 @@
                 </div>
                 <div class="row">
                     <div class="col text-end me-5">
+                        <a href="/admin/ai/model/new/learn" class="btn btn-primary-outline">모델 학습</a>
                         <a href="/admin/ai/model/add" class="btn btn-primary add">모델 재학습</a>
                     </div>
                 </div>
