--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -205,7 +205,7 @@
                 document.getElementById("spin").style.display = "none";
                 document.getElementById("main").style.opacity = "100%";
                 document.getElementById("comment").style.display = 'none';
-
+                console.log(data);
                 myModal.show(myModal);
             })
             .catch(error => {
