--- a/src/main/resources/templates/test/pathTestResult.html
+++ b/src/main/resources/templates/test/pathTestResult.html
@@ -24,11 +24,11 @@
                                 <div class="col-2">
                                     <div class="nodeHeader">
                                         <span style="width:1rem; height:1rem; background-color: red; display:inline-block" class="mt-1"></span> : 최적경로
-                                        <span id="optimal">최적 시간(초)</span>(초)
+                                        <span id="optimal">최적 시간(초)</span>
                                     </div>
                                     <div class="nodeHeader">
                                         <span style="width:1rem; height:1rem; background-color: blue; display: inline-block" class="mt-1"></span> : 최단경로
-                                        <span id="short">최단 시간(초)</span>(초)
+                                        <span id="short">최단 시간(초)</span>
                                     </div>
                                 </div>
                                 <div class="col-3 offset-1">
