--- a/src/main/resources/templates/ai/ai-add.html
+++ b/src/main/resources/templates/ai/ai-add.html
@@ -125,7 +125,7 @@
         alert("데이터 길이가 300보다 작습니다.");
 
         // 이전 페이지로 되돌아가기
-        //window.history.back();
+        window.history.back();
     }
     function doFilter(){
 
