--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -211,10 +211,11 @@
                 document.getElementById("minSplit").value = data[0];
 
                 for(let k = 0; k < data.length-2; k++){
+                    console.log(data[k]);
                     arr.push(data[k]);
                 }
 
-                console.log(arr);
+
 
                 myModal.show(myModal);
             })
