--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -205,7 +205,8 @@
                 document.getElementById("main").style.opacity = "100%";
                 document.getElementById("comment").style.display = 'none';
                 let arr = [];
-                console.log(data);
+                const numbers = data.match(/\d+/g).map(Number);
+                console.log(numbers);
                 document.getElementById("depth").value = data[2];
                 document.getElementById("minLeaf").value = data[1];
                 document.getElementById("minSplit").value = data[0];
